Bug 742438: Fix straggling bool-vs-NULL comparison after HashSet::put return-type change. r=terrence